--- a/ClientApp/src/components/models/menuHome.css
+++ b/ClientApp/src/components/models/menuHome.css
@@ -25,12 +25,12 @@
 .menu-wrapper .ionMenu{
     background: var(--background-menu);
     transition: all .1s linear;
-    padding: 0px 14px;
-    overflow-x: hidden;
+    /*padding: 0px 14px;*/
+    overflow:hidden;
     height: 100%;
-    -ms-overflow-style: none;
+    /*-ms-overflow-style: none;*/
 }
-.menu-wrapper .ionMenu::-webkit-scrollbar { width: 0 !important }
+/*.menu-wrapper .ionMenu::-webkit-scrollbar { width: 0 !important }*/
 
 
 .menu-wrapper .ionLink{
@@ -217,3 +217,11 @@
     padding-left: 3px;
     cursor: default;
 }
+
+.menu-wrapper .scrollDiv{
+    background: inherit;
+    overflow-x: hidden;
+    -ms-overflow-style: none;
+    overflow: -moz-scrollbars-vertical;
+}
+.menu-wrapper .scrollDiv::-webkit-scrollbar { width: 0 !important }
