--- a/ClientApp/src/components/models/orderTree.css
+++ b/ClientApp/src/components/models/orderTree.css
@@ -26,12 +26,12 @@
     position: relative;
     background: var(--background-menu);
     transition: all .1s linear;
-    padding: 0px 14px;
-    overflow-x: hidden;
+    /*padding: 0px 14px;*/
+    overflow:hidden;
     height: 100%;
-    -ms-overflow-style: none;
+    /*-ms-overflow-style: none;*/
 }
-.tree .ionMenu::-webkit-scrollbar { width: 0 !important }
+/*.tree .ionMenu::-webkit-scrollbar { width: 0 !important }*/
 
 
 .tree .ionLink{
@@ -127,10 +127,9 @@
 Стиль заголовка
  */
 .tree .ionSideHead{
-    color: white;
-    text-align: center;
-    height: 50px;
-    width: 100%;
+    color: black;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 
@@ -169,6 +168,7 @@
     padding-right: 15px;
 }
 .tree .movediv{
+    
     /* запретить выделение*/
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -203,3 +203,12 @@
     border: 1px solid #e9ecef;
     box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
 }
+
+.tree  .scrollDiv{
+    background: inherit;
+    overflow-x: hidden;
+    -ms-overflow-style: none;
+    overflow: -moz-scrollbars-vertical;
+    -ms-overflow-style: none;
+}
+.tree .scrollDiv::-webkit-scrollbar { width: 0 !important }
